--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             padding: 20px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
             margin-top: 20px;
-            border-left: 5px solid #3498db;
+            /*border-left: 5px solid #3498db;*/
         }
         .fun-fact-header {
             color: #3498db;
@@ -71,7 +71,7 @@
 <body>
     <div class="loading-container">
         <div class="spinner"></div>
-        <p class="message">Waking up <span class="project-name">the application</span>. Please wait a moment...</p>
+        <p class="message">Render is currently waking up and will direct you to <span class="project-name">the application</span>. In the meanwhile here's a fun fact for you!</p>
         
         <div class="fun-fact-container">
             <div class="fun-fact-header">Did You Know?</div>
